重构一些内容